--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
+    "@hapi/inert": "^6.0.3",
     "@hapi/jwt": "^2.0.1",
     "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
@@ -27,6 +28,7 @@
     "joi": "^17.4.0",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^5.10.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "redis": "^3.1.2"
   }
 }
